# unison

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env.txt  notes.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  todo.md
.github/workflows/: django.yml
iskcon_web/: manage.py
iskcon_web/iskcon_web/: asgi.py  settings.py  urls.py  wsgi.py
prod/: gunicorn.service  nginx.conf
scripts/: build.sh  fmt.sh  install.sh  live.sh  remig.sh  restart.sh  update.sh
src/: manage.py
src/accounts/: admin.py  forms.py  models.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_alter_expensecategory_category_balance_and_more.py  0003_alter_transanction_signed_amount.py  0004_paymentmode_transanction_txn_status_and_more.py  0005_billerdetails.py  0006_adminlinkmodel.py  0007_rename_adminlinkmodel_getstatement_link2.py  0008_adminlinkmodel_delete_getstatement_delete_link2_and_more.py
src/activities/: admin.py  models.py  urls.py  views.py
src/activities/migrations/: 0001_initial.py  0002_communityactivity_content_communityactivity_slug_and_more.py  0003_alter_communityactivity_title.py
src/blog/: admin.py  models.py  urls.py  views.py
src/blog/migrations/: 0001_initial.py  0002_blogpost_slug_alter_blogpost_content.py  0003_blogpost_created_at_blogpost_updated_at.py  0004_blogcategory_blogpost_category.py  0005_alter_blogpost_author.py  0006_blogpost_cover_image.py  0007_blogpageconfig_alter_blogpost_summary.py
src/consts/: validators.py
src/donations/: admin.py  apps.py  forms.py  models.py  upi_gateway.py  urls.py  views.py
src/donations/migrations/: 0001_initial.py  0002_alter_donationtier_visible.py  0002_rename_donationinstance_donationreceived.py  (+2 more)
src/festivals/: apps.py
src/haps/: admin.py  apps.py  models.py  urls.py  views.py
src/home/: admin.py  context_processors.py  models.py  urls.py  views.py
src/opuja/: apps.py
src/static/: multiStepForm.css  multiStepForm.js  styles.css
src/templates/: 404.html  base.html  commons.html
src/temple_web/: admin.py  apps.py  asgi.py  celery.py  myconfig.py  settings.py  tasks.py  urls.py  views.py
src/tours/: apps.py
src/users/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
src/utils/: adirect.py  admin_links.py  ckeditor.py  images.py  logging.py  passwords.py  slugs.py
temple-web/activities/: admin.py  models.py
temple-web/home/: admin.py  models.py  views.py
temple-web/templates/: 404.html
temple-web/temple_web/: wsgi.py
temple-web/utils/: images.py
(+56 files in other folders)
