[tool.poetry]
name = "iskcon-backend"
version = "0.1.0"
description = ""
authors = ["aahnik <daw@aahnik.dev>"]
readme = "README.md"
packages = [{include = "iskcon_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.270"
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
